--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
   <div class="card">
     <h1>Recuperação de Conta</h1>
     <p>Escolhe o que queres recuperar</p>
+    <a href="/reactivate-account" class="btn"> Reativar Conta</a>
 
     <a href="/recover-username" class="btn"> Recuperar Nome de Utilizador</a>
 <a href="/recover-password" class="btn"> Recuperar Password</a>
